manifests/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app.kubernetes.io/name: homepage
  ports:
    - name: http
      port: 80
      targetPort: http
